spec/error_inferred_predicate_mismatch.expected
spec/error_inferred_predicate_mismatch.kex:4:16: error: `classifyParity` expects argument 1 to be Integer, but got String

classifyParity : Integer -> Bool
Aborted: fix type errors before running (use --no-check to skip).
