spec/error_inferred_predicate_mismatch.kex
# even? requires Integer; constrains the TypeVar without annotation.
let classifyParity(n) = n.even?
main do
  IO.printLine(classifyParity("hello"))
end
